--- a/app.json
+++ b/app.json
@@ -16,6 +16,11 @@
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
       }
-    } 
+    },
+    "extra": {
+      "eas": {
+        "projectId": "39a22d9c-7f52-493f-a674-d43aae398a2d"
+      }
+    }
   }
 }
