installing expo-dev-client package

--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.julioproject.linkedinlogin"
     },
     "extra": {
       "eas": {
