--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-auth-session": "^5.5.2",
+    "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
@@ -22,7 +23,7 @@
     "react-native-logs": "^5.1.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "expo-constants": "~16.0.2"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
