--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
+    "expo-location": "~17.0.1",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.27",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-logs": "^5.1.0",
+    "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-location": "~17.0.1",
-    "react-native-maps": "1.14.0"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
